<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/loading_container"
    >
    <ProgressBar android:id="@+id/loading_spinner"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dip"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/loading_error_container"
        android:padding="16dip">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_message"
            android:text="Error message"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />
        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_message"
            android:layout_centerHorizontal="true"
            android:text="Try again"
            android:textColor="#fff"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>